# nitori.org

./: CNAME  README.md  archives.html  authors.html  categories.html  creating-a-persistent-ssh-tunnel-as-a-systemd-user-service.html  i-poetry.html  index.html  keybase.txt  pelicanconf.py  problem-finding-a-list-subset-with-uniform-distribution.html  pyproject.toml  rss.xml  tags.html  tasks.py  trigger-build  uniform_list.html
.github/workflows/: deploy.yml
author/: jennifer-wilcox.html
category/: linux.html  math.html  python.html
content/: test-article.rst
content/linux/: systemd-user-service.rst
content/math/: uniform_list.rst
content/pages/: books.rst  contact.rst  j2gbc.md  j2gbc.rst  prog-dating-sim.rst  projects.rst  tech.rst  wandering-son.rst
content/python/: poetry.rst
pages/: contact.html  j2gbc.html  prog-dating-sim.html  projects.html
pages/books/: index.html
pages/contact/: index.html
pages/j2gbc/: index.html
pages/prog-dating-sim/: index.html
pages/projects/: index.html
pages/tech/: index.html
pages/wandering-son/: index.html
posts/2019/i-love-poetry/: index.html
posts/2019/ssh-tunnel-systemd/: index.html
posts/2020/uniform-list/: index.html
tag/: linux.html  math.html  poetry.html  python.html  ssh.html
theme/: style.scss
theme/css/: style.min.css
theme/static/: style.scss
theme/templates/: article.html  base.html  index.html  page.html
