[tool.poetry]
name = "nitori_org"
version = "0.1.0"
description = ""
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.0"
markdown = "^3.1"
invoke = "^1.2"
webassets = "^0.12.1"
cssmin = "^0.2.0"
pyscss = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
