[tool.poetry]
name = "nitori_org"
version = "0.1.0"
description = ""
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]

[tool.poetry.dependencies]
python = "^3.12"
cssmin = "^0.2.0"
invoke = "^2.2.0"
libsass = "^0.23.0"
pelican = "^4.0"
pelican-render-math = "^1.0.3"
pelican-webassets = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
